--- a/public/restaurant-la-note-enchantee.html
+++ b/public/restaurant-la-note-enchantee.html
@@ -16,181 +16,179 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet" />
     </head>
     <body>
-        <div class="container">
-            <header class="header">
-                <a href="./index.html" class="header__back"><i class="fa-solid fa-arrow-left"></i></a>
-                <img src="./images/logo/ohmyfood@2x.svg" alt="ohmyfood - logo" class="header__logo" />
-            </header>
+        <header class="header">
+            <a href="./index.html" class="header__back"><i class="fa-solid fa-arrow-left"></i></a>
+            <img src="./images/logo/ohmyfood@2x.svg" alt="ohmyfood - logo" class="header__logo" />
+        </header>
 
-            <main>
-                <div class="restaurant">
-                    <form class="restaurant__menu">
-                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurant__menu__image" />
-                        <h2>La note enchantée<i class="heart fa-solid fa-heart"></i></h2>
+        <main>
+            <div class="restaurant">
+                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurant__image" />
+                <form class="container restaurant__menu">
+                    <h2>La note enchantée<i class="heart fa-solid fa-heart"></i></h2>
 
-                        <section class="restaurant__menu__list">
-                            <h3>ENTRÉES</h3>
+                    <section class="restaurant__menu__list">
+                        <h3>ENTRÉES</h3>
 
-                            <article class="card-check card--animate delay-1">
-                                <div class="card-check__descriptions">
-                                    <h4>Ravioles de foie gras</h4>
-                                    <p>Accompagnés de leur crème à la truffe</p>
-                                </div>
+                        <article class="card-check card--animate delay-1">
+                            <div class="card-check__descriptions">
+                                <h4>Ravioles de foie gras</h4>
+                                <p>Accompagnés de leur crème à la truffe</p>
+                            </div>
 
-                                <span class="card-check__price">25€</span>
+                            <span class="card-check__price">25€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
 
-                            <article class="card-check card--animate delay-2">
-                                <div class="card-check__descriptions">
-                                    <h4>Caviar osciètre</h4>
-                                    <p>Sur blini à la farine de blé noir</p>
-                                </div>
+                        <article class="card-check card--animate delay-2">
+                            <div class="card-check__descriptions">
+                                <h4>Caviar osciètre</h4>
+                                <p>Sur blini à la farine de blé noir</p>
+                            </div>
 
-                                <span class="card-check__price">35€</span>
+                            <span class="card-check__price">35€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
 
-                            <article class="card-check card--animate delay-3">
-                                <div class="card-check__descriptions">
-                                    <h4>Homard et espuma de potiron</h4>
-                                    <p>Mariné aux zestes d'orange</p>
-                                </div>
+                        <article class="card-check card--animate delay-3">
+                            <div class="card-check__descriptions">
+                                <h4>Homard et espuma de potiron</h4>
+                                <p>Mariné aux zestes d'orange</p>
+                            </div>
 
-                                <span class="card-check__price">20€</span>
+                            <span class="card-check__price">20€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
 
-                            <article class="card-check card--animate delay-4">
-                                <div class="card-check__descriptions">
-                                    <h4>Foie gras de canard cuit entier</h4>
-                                    <p>Confiture de figue et pain toasté</p>
-                                </div>
+                        <article class="card-check card--animate delay-4">
+                            <div class="card-check__descriptions">
+                                <h4>Foie gras de canard cuit entier</h4>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
 
-                                <span class="card-check__price">35€</span>
+                            <span class="card-check__price">35€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
-                        </section>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
+                    </section>
 
-                        <section class="restaurant__menu__list">
-                            <h3>PLATS</h3>
+                    <section class="restaurant__menu__list">
+                        <h3>PLATS</h3>
 
-                            <article class="card-check card--animate delay-5">
-                                <div class="card-check__descriptions">
-                                    <h4>Noix de coquilles Saint-Jacques</h4>
-                                    <p>Sur lit de purée de céleri-rave</p>
-                                </div>
+                        <article class="card-check card--animate delay-5">
+                            <div class="card-check__descriptions">
+                                <h4>Noix de coquilles Saint-Jacques</h4>
+                                <p>Sur lit de purée de céleri-rave</p>
+                            </div>
 
-                                <span class="card-check__price">40€</span>
+                            <span class="card-check__price">40€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
 
-                            <article class="card-check card--animate delay-6">
-                                <div class="card-check__descriptions">
-                                    <h4>Langoustine poêlée</h4>
-                                    <p>Purée de patate douce</p>
-                                </div>
+                        <article class="card-check card--animate delay-6">
+                            <div class="card-check__descriptions">
+                                <h4>Langoustine poêlée</h4>
+                                <p>Purée de patate douce</p>
+                            </div>
 
-                                <span class="card-check__price">35€</span>
+                            <span class="card-check__price">35€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
 
-                            <article class="card-check card--animate delay-7">
-                                <div class="card-check__descriptions">
-                                    <h4>Mijoté de queue de boeuf</h4>
-                                    <p>Et riz sauvage aux zestes de citron</p>
-                                </div>
+                        <article class="card-check card--animate delay-7">
+                            <div class="card-check__descriptions">
+                                <h4>Mijoté de queue de boeuf</h4>
+                                <p>Et riz sauvage aux zestes de citron</p>
+                            </div>
 
-                                <span class="card-check__price">44€</span>
+                            <span class="card-check__price">44€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
-                        </section>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
+                    </section>
 
-                        <section class="restaurant__menu__list">
-                            <h3>DÉSSERTS</h3>
+                    <section class="restaurant__menu__list">
+                        <h3>DÉSSERTS</h3>
 
-                            <article class="card-check card--animate delay-8">
-                                <div class="card-check__descriptions">
-                                    <h4>Macaron noisette et chocolat</h4>
-                                    <p>Glace au caramel brun et sel de Guérande</p>
-                                </div>
+                        <article class="card-check card--animate delay-8">
+                            <div class="card-check__descriptions">
+                                <h4>Macaron noisette et chocolat</h4>
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                            </div>
 
-                                <span class="card-check__price">18€</span>
+                            <span class="card-check__price">18€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
 
-                            <article class="card-check card--animate delay-9">
-                                <div class="card-check__descriptions">
-                                    <h4>Baba au rhum revisité</h4>
-                                    <p>Avec son coulis de citron</p>
-                                </div>
+                        <article class="card-check card--animate delay-9">
+                            <div class="card-check__descriptions">
+                                <h4>Baba au rhum revisité</h4>
+                                <p>Avec son coulis de citron</p>
+                            </div>
 
-                                <span class="card-check__price">22€</span>
+                            <span class="card-check__price">22€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
 
-                            <article class="card-check card--animate delay-10">
-                                <div class="card-check__descriptions">
-                                    <h4>Tarte au citron meringuée</h4>
-                                    <p>Déstructurée</p>
-                                </div>
+                        <article class="card-check card--animate delay-10">
+                            <div class="card-check__descriptions">
+                                <h4>Tarte au citron meringuée</h4>
+                                <p>Déstructurée</p>
+                            </div>
 
-                                <span class="card-check__price">23€</span>
+                            <span class="card-check__price">23€</span>
 
-                                <div class="card-check__checked">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </div>
-                            </article>
-                        </section>
+                            <div class="card-check__checked">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                        </article>
+                    </section>
 
-                        <button type="submit" class="btn btn--classic btn--p50 btn--center">Commander</button>
-                    </form>
-                </div>
-            </main>
+                    <button type="submit" class="btn btn--classic btn--p50 btn--center">Commander</button>
+                </form>
+            </div>
+        </main>
 
-            <footer class="footer">
-                <h3 class="footer__heading">ohmyfood</h3>
-                <nav class="footer__navigation">
-                    <ul>
-                        <li>
-                            <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
-                        </li>
-                        <li><a href="#">Mentions légales</a></li>
-                        <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-                    </ul>
-                </nav>
-            </footer>
-        </div>
+        <footer class="footer">
+            <h3 class="footer__heading">ohmyfood</h3>
+            <nav class="footer__navigation">
+                <ul>
+                    <li>
+                        <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+                    </li>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+                </ul>
+            </nav>
+        </footer>
 
         <!-- font awesome -->
         <script src="https://kit.fontawesome.com/994e9d2d58.js" crossorigin="anonymous"></script>
